# presentations

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: 000-editorial-perspective.mdc  050-architecture-map.mdc  100-python-standards.mdc  110-fastapi-conventions.mdc  120-pydantic-v2.mdc  130-config-settings.mdc  130-secrets-safety.mdc  140-logging.mdc  150-testing.mdc  200-docker-cms.mdc  310-gcp-services.mdc  400-vertex-ai.mdc  410-google-adk.mdc  600-nicegui-conventions.mdc  700-cicd.mdc  900-security-mcp-paths.mdc
.cursor/skills/300-mcp-servers/: SKILL.md
.cursor/skills/400-gemini-auth/: SKILL.md
.cursor/skills/500-article-images-publish/: SKILL.md
.cursor/skills/500-fix-article-quality/: SKILL.md  markets-workflow.md  tech-workflow.md
.cursor/skills/500-mermaid-infographic/: SKILL.md
.cursor/skills/500-morning-briefing/: SKILL.md
.cursor/skills/500-tech-article-pipeline/: SKILL.md
.cursor/skills/600-nicegui-admin/: SKILL.md
.cursor/skills/610-frontend-design/: SKILL.md
.cursor/skills/700-publish-gcp/: SKILL.md
.cursor/skills/800-code-review/: SKILL.md
.cursor/skills/810-commit-push-pr/: SKILL.md
.cursor/skills/820-documentation/: SKILL.md
.cursor/skills/830-fix/: SKILL.md
debug_scripts/: verify_deck_quality.py  verify_template_compile.py  verify_template_enrichment.py
docker/: Dockerfile  Dockerfile.ui  docker-compose.yml  entrypoint.sh  nginx.conf
documentation/: API_REFERENCE.md  DEVELOPMENT_GUIDE.md  MCP_INTEGRATION.md  README.md  SYSTEM_ARCHITECTURE.md  TEMPLATE_LIBRARY_GUIDE.md  antigravity-mcp.example.json
documentation/briefs/: architecture.md  design-system-md3.md  md3-tokens-tech.css
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  types.ts
presentations/: Dockerfile  Dockerfile.ui  docker-compose.yml  nginx.conf
scripts/: profile_diag.ps1  start-pptx-stack.ps1  thumbnail.py
scripts/office/: add_slide.py  clean.py  pack.py  soffice.py  unpack.py
src/presentations/: __init__.py
templates/: sample-brief.txt  sample-deck.md
tests/: __init__.py  test_catalog.py  test_context7_client.py  test_discover.py  test_e2e_api.py  test_generation_context.py  test_job_store.py  test_layout_roles.py  test_layout_validate.py  test_ollama_provider.py  test_orchestrator.py  test_pdf_ingest.py  test_pdf_mcp_client.py  test_pipeline_logging.py  test_pptx_layout.py  test_profiles.py  test_qdrant_store.py  test_router.py  test_skill_rules.py  test_smoke_compile.py  test_source_enrichment.py  test_state.py  test_synthesis.py  test_template_registry.py  test_theme_and_schemas.py  test_topic_classifier.py
(+90 files in other folders)
